--- a/lord.kv
+++ b/lord.kv
@@ -1,6 +1,7 @@
 WindowManager:
     MainWindow:
     DecksWindow:
+    DeckWindow:
 
 <MainWindow>:
     name: "main"
@@ -45,7 +46,23 @@ WindowManager:
                 Button:
                     text: "Go Back"
                     size_hint_y: None
-                    height: 40                    
+                    height: 40
                     on_release:
                         app.root.current = "main"
                         root.manager.transition.direction = "right"
+
+<DeckWindow>:
+    name: "deck_window"
+    BoxLayout:
+        orientation: "vertical"
+        #size_hint: None, None
+        center: root.center
+        spacing: 10
+
+        Button:
+            text: "Go Back"
+            size_hint_y: None
+            height: 40
+            on_release:
+                app.root.current = "decks_window"
+                root.manager.transition.direction = "right"
