--- a/lord.kv
+++ b/lord.kv
@@ -12,6 +12,11 @@ WindowManager:
         spacing: 10
 
         MDFillRoundFlatButton:
+            text: "Games"
+            theme_text_color: "Custom"
+            text_color: 0, 0, 1, 1
+            pos_hint: {"center_x": 0.5, "center_y": 0.5}
+        MDFillRoundFlatButton:
             text: "Decks"
             theme_text_color: "Custom"
             text_color: 0, 0, 1, 1
@@ -59,10 +64,27 @@ WindowManager:
         center: root.center
         spacing: 10
 
-        Button:
-            text: "Go Back"
-            size_hint_y: None
-            height: 40
-            on_release:
-                app.root.current = "decks_window"
-                root.manager.transition.direction = "right"
+        ScrollView:
+            #do_scroll_x: False
+            #do_scroll_y: True
+
+            ListagemDeck:
+                cols: 1
+                spacing: 10
+                #size_hint_y: None
+
+                Label:
+                    text: 'Main Deck'
+                Label:
+                    text: 'Starting Threat:'
+                Label:
+                    text: '3 Heroes, 57 cards'
+
+
+                Button:
+                    text: "Go Back"
+                    size_hint_y: None
+                    height: 40
+                    on_release:
+                        app.root.current = "decks_window"
+                        root.manager.transition.direction = "right"
